--- a/openwisp_monitoring/monitoring/static/monitoring/css/dashboard-chart.css
+++ b/openwisp_monitoring/monitoring/static/monitoring/css/dashboard-chart.css
@@ -7,3 +7,13 @@
 #ow-chart-inner-container .quick-link-container {
   margin-top: 10px;
 }
+#ow-chart-time {
+  margin-top: 9px;
+}
+.ow-chart:first-child {
+  margin-top: 45px;
+}
+#ow-chart-contents .ow-chart + .ow-chart {
+  margin-top: 23px;
+  padding-top: 23px;
+}
